@@ -6,6 +6,7 @@ The pages /home and /bellman now have a left side border of the same width.
 The button for opening the navigation is now to the left of the "Navigation" label in the navigation bar.
 Cleaned up some typos and text.
 Added a banner at the top and a favicon for the tab.
+Reformatted input reminder text in the result section.
 
 v1.3.1:
 Cleaned up python code for flake8 code-check.
